Fix font-size jumping zoom level.

--- a/themes/default/_base.styl
+++ b/themes/default/_base.styl
@@ -1,5 +1,8 @@
 @import "_guide"
 
+*
+  font-size base-font-size
+
 html, body
   padding 0
   margin 0
